--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.3",
     "knex": "^0.14.4",
     "sqlite3": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
-  }
+  },
+  "prettier": {
+    "singleQuote": true
+  },
+  "repository": "https://github.com/DragonRydrz/node-express-mini.git",
+  "author": "DragonRydrz <DragonRydrz@me.com>"
 }
