--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "knex": "^0.14.4",
     "sqlite3": "^4.0.0"
