--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "helmet": "^3.12.0",
     "knex": "^0.14.4",
+    "morgan": "^1.9.0",
     "sqlite3": "^4.0.0"
   },
   "devDependencies": {
