--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "knex": "^0.14.4",
